# rust_example_openai_egui_app

./: Cargo.toml  instruction.md
src/: main.rs
