[package]
name = "openai_egui_app"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
egui = "0.20"
eframe = "0.20"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"